--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -30,12 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7bc63035-9187-4bea-bf8a-46498f0377e0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dotProd(v1, v2): # Define our function and arguments\n",
     "    if len(v1) is len(v2): # Test equality of vector length\n",
@@ -129,12 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ce1941e-8b57-4d31-99d6-a1dbd70fac8b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[16], [38]]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def matMul(a, b): # Define function, take 2 matrices\n",
     "    for i in range(len(a)): # Make sure a is matrix\n",
@@ -212,10 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7c0c3c30-45dc-49d2-9074-5c4e1b15042c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np # import library as np object\n",
     "\n",
@@ -234,10 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5fe1b172-8270-46f4-86e0-f7984f39ee95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.shape"
    ]
@@ -260,39 +304,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e540cddb-1987-4c87-9da9-0e58a396b7a9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array([1,2,3,4]) # Specify each element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ba7a850e-5be8-45d7-a491-0c27af1b55c4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.zeros((3,3)) # Generate 3 x 3 array of zeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0d47ddb0-74c6-4ff2-bcb1-137ff2e3c03b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.eye(3) # Generate 3 x 3 identity matrix"
    ]
@@ -330,10 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4c68f8f9-775f-45eb-99e9-f88e8db72ac4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([1,2,3,4]) # Specify each element\n",
     "np.shape(myArray)"
@@ -349,10 +441,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c7499e20-4653-4098-8cea-f392d3bd7c15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "np.shape(myArray)"
@@ -368,10 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "19486a06-319e-4568-91de-d4631154242c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.reshape((2,2)) # transform to square matrix"
    ]
@@ -386,10 +501,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0889d245-c6f7-4595-bd9c-6b57caca95f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.reshape((4,1)) # transform to column vector"
    ]
@@ -404,10 +533,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "03f64469-20c4-4328-9b55-000bc26ff169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "myArray.T # transposes the array if 2-D"
@@ -427,10 +570,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8c8510d3-a0d6-4a21-9e32-d8fb03410293",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([1,2,3,4])\n",
     "newArray = np.array(myArray) + 1\n",
@@ -447,10 +601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "82421852-4d2d-45b9-b5cb-5d1d3fa06112",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, -1])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray - newArray # must have same shape"
    ]
@@ -465,10 +630,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "72c4ec09-340a-42da-8493-419b7f07c596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.T.dot(myArray) # to get 4 x 4 product"
    ]
@@ -483,10 +659,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0059c6f1-d5b7-461f-ba44-12f46c088523",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.T @ myArray # '@' only works in python >=3.5"
    ]
@@ -507,10 +694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ea111480-e1e7-4316-9e3f-401551928601",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(32)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def squareFunc(a=1, b=1, c=1, x=1):\n",
     "    coef = np.array([a, b, c])\n",
@@ -554,10 +752,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2c05b940-bb54-45e0-b82e-65c8e76a8b78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24368222720385024"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.rand() # Generates a single value"
@@ -565,20 +774,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "918b11fd-2173-4112-944c-ec5a2cb8d8a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33998691, 0.11301929, 0.57737903])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.rand(3) # Array of 3 random values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0f272f0a-853d-49ef-993c-1972522a20db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.89910765, 0.87819327, 0.87213462, 0.33897267, 0.43844771],\n",
+       "       [0.93772083, 0.01707517, 0.90511017, 0.59721187, 0.19677465],\n",
+       "       [0.82606468, 0.4631903 , 0.70246883, 0.2510827 , 0.31992913],\n",
+       "       [0.62352588, 0.54730759, 0.5250699 , 0.9963433 , 0.28323874],\n",
+       "       [0.75252899, 0.48929926, 0.54939724, 0.23009092, 0.08320195]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.rand(5,5) # Create a 5 x 5 matrix of random numbers"
    ]
@@ -600,10 +835,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9e4b54bd-fff3-452b-ac80-2207408d62cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(0.2610275885427637),\n",
+       " np.float64(0.6466705103031859),\n",
+       " np.float64(1.8209956445980748),\n",
+       " np.float64(0.42007997136339387),\n",
+       " np.float64(0.32495694622327864),\n",
+       " np.float64(1.0913369450691093),\n",
+       " np.float64(0.4020413628472446),\n",
+       " np.float64(0.9602300829512295),\n",
+       " np.float64(0.08135410413444628),\n",
+       " np.float64(1.6121316199147777)]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def expD(x): # Define my function\n",
     "    if isinstance(x, float) | isinstance(x, int): # Test if argument is list or not\n",
@@ -637,10 +892,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "21af548c-c47e-4fd4-bcc6-a3bcdcfbe90b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'full_data_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n",
+      "\u001b[1;32m----> 1\u001b[0m sampled_data \u001b[38;5;241m=\u001b[39m \u001b[43mfull_data_name\u001b[49m\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m10000\u001b[39m, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66;03m# Don't run, we don't have any data loaded. :)\u001b[39;00m\n",
+      "\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'full_data_name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sampled_data = full_data_name.sample(10000, replace=False) # Don't run, we don't have any data loaded. :)"
    ]
@@ -663,10 +932,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "bc3d1a1b-5cfc-4b54-b36b-888c245795a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.024997895148220435)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from scipy.stats import norm\n",
     "\n",
@@ -685,10 +965,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6915bd80-7071-44c6-ab37-05302a99f5c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.3413447460685429)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "norm.cdf(1) - norm.cdf(0)"
    ]
@@ -703,10 +994,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d7d16d30-26dc-420f-90be-3c1d4ac226bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "draws = np.random.normal(size=100)\n",
     "len([i for i in draws if (i<=1) & (i>=0)])"
@@ -753,12 +1055,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#si-exercise"
+    "#si-exercise\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "class RegressionModel:\n",
+    "    def __init__(self, x, y, create_intercept: bool = True, regression_type: str = 'ols'):\n",
+    "        self.x = pd.DataFrame(x)\n",
+    "        self.y = pd.DataFrame(y)\n",
+    "        self.create_intercept = create_intercept\n",
+    "        self.regression_type = regression_type.lower()\n",
+    "        self.results = {}\n",
+    "\n",
+    "        if self.create_intercept is True:\n",
+    "            self.add_intercept()\n",
+    "\n",
+    "        if self.regression_type == 'ols':\n",
+    "            self.ols_regression()\n",
+    "        else:\n",
+    "            raise NotImplementedError(\"Only 'ols' regression is currently implemented.\")\n",
+    "    \n",
+    "    def add_intercept(self):\n",
+    "        self.x.insert(0, 'intercept', 1.0)\n",
+    "\n",
+    "    def ols_regression(self):\n",
+    "        X = self.x.values\n",
+    "        y = self.y.values\n",
+    "\n",
+    "        # Calculate beta coefficients.\n",
+    "        beta = np.linalg.inv(X.T @ X) @ (X.T @ y)\n",
+    "\n",
+    "        # Predictions and residuals.\n",
+    "        y_hat = X @ beta\n",
+    "        residuals = y - y_hat\n",
+    "\n",
+    "        # Degrees of freedom.\n",
+    "        n = X.shape[0]\n",
+    "        k = X.shape[1]\n",
+    "        df = n - k\n",
+    "\n",
+    "        # Residual variance and variance-covariance matrix.\n",
+    "        residual_var = (residuals.T @ residuals) / df\n",
+    "        var_beta = residual_var * np.linalg.inv(X.T @ X)\n",
+    "\n",
+    "        # Standard errors.\n",
+    "        se = np.sqrt(np.diag(var_beta))\n",
+    "\n",
+    "        # t-stats and p-values.\n",
+    "        t_stats = beta.flatten() / se\n",
+    "        p_values = [2 * (1 - stats.t.cdf(np.abs(t), df)) for t in t_stats]\n",
+    "\n",
+    "        # Store results.\n",
+    "        var_names = self.x.columns\n",
+    "        for i, var in enumerate(var_names):\n",
+    "            self.results[var] = {\n",
+    "                'coefficient': beta[i][0],\n",
+    "                'standard_error': se[i],\n",
+    "                't_stat': t_stats[i],\n",
+    "                'p_value': p_values[i]\n",
+    "            }\n",
+    "\n",
+    "    def summary(self):\n",
+    "        summary_data = {\n",
+    "            \"Variable name\": [],\n",
+    "            \"coefficient value\": [],\n",
+    "            \"standard error\": [],\n",
+    "            \"t-statistic\": [],\n",
+    "            \"p-value\": []\n",
+    "        }\n",
+    "\n",
+    "        for var, metrics in self.results.items():\n",
+    "            summary_data[\"Variable name\"].append(var)\n",
+    "            summary_data[\"coefficient value\"].append(metrics[\"coefficient\"])\n",
+    "            summary_data[\"standard error\"].append(metrics[\"standard_error\"])\n",
+    "            summary_data[\"t-statistic\"].append(metrics[\"t_stat\"])\n",
+    "            summary_data[\"p-value\"].append(metrics[\"p_value\"])\n",
+    "\n",
+    "        return pd.DataFrame(summary_data)"
    ]
   }
  ],
@@ -769,16 +1149,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "name": "python"
   }
  },
  "nbformat": 4,
