--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1064,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import norm\n",
+    "from scipy import stats\n",
     "\n",
     "class RegressionModel:\n",
     "    def __init__(self, x, y, create_intercept: bool = True, regression_type: str = 'ols'):\n",
