--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1083,8 +1083,8 @@
     "            raise NotImplementedError(\"Only 'ols' regression is currently implemented.\")\n",
     "    \n",
     "    def add_intercept(self):\n",
-    "        self.x.insert(0, 'intercept', 1.0)\n",
-    "\n",
+    "        self.x['intercept'] = 1.0\n",
+    " \n",
     "    def ols_regression(self):\n",
     "        X = self.x.values\n",
     "        y = self.y.values\n",
