--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1058,7 +1058,15 @@
    "execution_count": null,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#si-exercise\n",
     "\n",
@@ -1067,7 +1075,7 @@
     "from scipy import stats\n",
     "\n",
     "class RegressionModel:\n",
-    "    def __init__(self, x, y, create_intercept: bool = True, regression_type: str = 'ols'):\n",
+    "    def __init__(self, x, y, create_intercept: bool, regression_type: str = 'ols'):\n",
     "        self.x = pd.DataFrame(x)\n",
     "        self.y = pd.DataFrame(y)\n",
     "        self.create_intercept = create_intercept\n",
@@ -1138,7 +1146,16 @@
     "            summary_data[\"t-statistic\"].append(metrics[\"t_stat\"])\n",
     "            summary_data[\"p-value\"].append(metrics[\"p_value\"])\n",
     "\n",
-    "        return pd.DataFrame(summary_data)"
+    "        return pd.DataFrame(summary_data)\n",
+    "\n",
+    "'''data = pd.read_csv(\"tests/files/assignment8Data.csv\")\n",
+    "x = data[['sex','age','educ','white']]\n",
+    "y = data['incwage']\n",
+    "reg = RegressionModel(x, y, create_intercept=True)\n",
+    "\n",
+    "x = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
+    "x\n",
+    "print(reg.create_intercept)'''"
    ]
   }
  ],
