--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1063,7 +1063,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "       sex  age  educ  white  intercept\n",
+      "0        2   32     7      1          1\n",
+      "1        1   34     6      1          1\n",
+      "2        1   93     4      1          1\n",
+      "3        1   44     6      1          1\n",
+      "4        2   34     8      1          1\n",
+      "...    ...  ...   ...    ...        ...\n",
+      "13707    1   51     6      1          1\n",
+      "13708    2   47     6      1          1\n",
+      "13709    1   66    10      1          1\n",
+      "13710    1   59     6      1          1\n",
+      "13711    2   57     8      0          1\n",
+      "\n",
+      "[13712 rows x 5 columns]\n"
      ]
     }
    ],
@@ -1091,7 +1104,7 @@
     "            raise NotImplementedError(\"Only 'ols' regression is currently implemented.\")\n",
     "    \n",
     "    def add_intercept(self):\n",
-    "        self.x['intercept'] = 1.0\n",
+    "        self.x['intercept'] = 1\n",
     " \n",
     "    def ols_regression(self):\n",
     "        X = self.x.values\n",
@@ -1154,8 +1167,8 @@
     "reg = RegressionModel(x, y, create_intercept=True)\n",
     "\n",
     "x = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
-    "x\n",
-    "print(reg.create_intercept)'''"
+    "\n",
+    "print(reg.x)'''"
    ]
   }
  ],
