--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1060,24 +1060,147 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       sex  age  educ  white  intercept\n",
-      "0        2   32     7      1          1\n",
-      "1        1   34     6      1          1\n",
-      "2        1   93     4      1          1\n",
-      "3        1   44     6      1          1\n",
-      "4        2   34     8      1          1\n",
-      "...    ...  ...   ...    ...        ...\n",
-      "13707    1   51     6      1          1\n",
-      "13708    2   47     6      1          1\n",
-      "13709    1   66    10      1          1\n",
-      "13710    1   59     6      1          1\n",
-      "13711    2   57     8      0          1\n",
-      "\n",
-      "[13712 rows x 5 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>educ</th>\n",
+       "      <th>white</th>\n",
+       "      <th>intercept</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>32</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>93</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13707</th>\n",
+       "      <td>1</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13708</th>\n",
+       "      <td>2</td>\n",
+       "      <td>47</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13709</th>\n",
+       "      <td>1</td>\n",
+       "      <td>66</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13710</th>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13711</th>\n",
+       "      <td>2</td>\n",
+       "      <td>57</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13712 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sex  age  educ  white  intercept\n",
+       "0        2   32     7      1          1\n",
+       "1        1   34     6      1          1\n",
+       "2        1   93     4      1          1\n",
+       "3        1   44     6      1          1\n",
+       "4        2   34     8      1          1\n",
+       "...    ...  ...   ...    ...        ...\n",
+       "13707    1   51     6      1          1\n",
+       "13708    2   47     6      1          1\n",
+       "13709    1   66    10      1          1\n",
+       "13710    1   59     6      1          1\n",
+       "13711    2   57     8      0          1\n",
+       "\n",
+       "[13712 rows x 5 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1159,7 +1282,7 @@
     "            summary_data[\"t-statistic\"].append(metrics[\"t_stat\"])\n",
     "            summary_data[\"p-value\"].append(metrics[\"p_value\"])\n",
     "\n",
-    "        return pd.DataFrame(summary_data)\n",
+    "        return pd.Series(summary_data)\n",
     "\n",
     "'''data = pd.read_csv(\"tests/files/assignment8Data.csv\")\n",
     "x = data[['sex','age','educ','white']]\n",
@@ -1167,8 +1290,9 @@
     "reg = RegressionModel(x, y, create_intercept=True)\n",
     "\n",
     "x = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
-    "\n",
-    "print(reg.x)'''"
+    "#x\n",
+    "reg.x'''\n",
+    "#print(reg.x.equals(x))"
    ]
   }
  ],
