--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1060,147 +1060,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>educ</th>\n",
-       "      <th>white</th>\n",
-       "      <th>intercept</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>32</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>34</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>93</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>44</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>34</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13707</th>\n",
-       "      <td>1</td>\n",
-       "      <td>51</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13708</th>\n",
-       "      <td>2</td>\n",
-       "      <td>47</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13709</th>\n",
-       "      <td>1</td>\n",
-       "      <td>66</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13710</th>\n",
-       "      <td>1</td>\n",
-       "      <td>59</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13711</th>\n",
-       "      <td>2</td>\n",
-       "      <td>57</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13712 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       sex  age  educ  white  intercept\n",
-       "0        2   32     7      1          1\n",
-       "1        1   34     6      1          1\n",
-       "2        1   93     4      1          1\n",
-       "3        1   44     6      1          1\n",
-       "4        2   34     8      1          1\n",
-       "...    ...  ...   ...    ...        ...\n",
-       "13707    1   51     6      1          1\n",
-       "13708    2   47     6      1          1\n",
-       "13709    1   66    10      1          1\n",
-       "13710    1   59     6      1          1\n",
-       "13711    2   57     8      0          1\n",
-       "\n",
-       "[13712 rows x 5 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<positron-console-cell-136>:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
     }
    ],
    "source": [
@@ -1212,8 +1087,8 @@
     "\n",
     "class RegressionModel:\n",
     "    def __init__(self, x, y, create_intercept: bool, regression_type: str = 'ols'):\n",
-    "        self.x = pd.DataFrame(x)\n",
-    "        self.y = pd.DataFrame(y)\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
     "        self.create_intercept = create_intercept\n",
     "        self.regression_type = regression_type.lower()\n",
     "        self.results = {}\n",
@@ -1231,7 +1106,7 @@
     " \n",
     "    def ols_regression(self):\n",
     "        X = self.x.values\n",
-    "        y = self.y.values\n",
+    "        y = self.y.values.reshape(-1, 1)  # Convert 1D array to column vector\n",
     "\n",
     "        # Calculate beta coefficients.\n",
     "        beta = np.linalg.inv(X.T @ X) @ (X.T @ y)\n",
@@ -1282,7 +1157,7 @@
     "            summary_data[\"t-statistic\"].append(metrics[\"t_stat\"])\n",
     "            summary_data[\"p-value\"].append(metrics[\"p_value\"])\n",
     "\n",
-    "        return pd.Series(summary_data)\n",
+    "        return pd.DataFrame(summary_data)\n",
     "\n",
     "'''data = pd.read_csv(\"tests/files/assignment8Data.csv\")\n",
     "x = data[['sex','age','educ','white']]\n",
@@ -1291,8 +1166,10 @@
     "\n",
     "x = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
     "#x\n",
-    "reg.x'''\n",
-    "#print(reg.x.equals(x))"
+    "#reg.x\n",
+    "type(x)\n",
+    "#type(reg.y)\n",
+    "print(reg.y.equals(y))'''\n"
    ]
   }
  ],
