--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1063,19 +1063,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False False True True True\n",
+      "True True True True True\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<positron-console-cell-136>:24: SettingWithCopyWarning: \n",
+      "<positron-console-cell-37>:25: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable name</th>\n",
+       "      <th>coefficient value</th>\n",
+       "      <th>standard error</th>\n",
+       "      <th>t-statistic</th>\n",
+       "      <th>p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>-13565.0</td>\n",
+       "      <td>584.976467</td>\n",
+       "      <td>-23.189669</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>age</td>\n",
+       "      <td>-235.0</td>\n",
+       "      <td>16.183833</td>\n",
+       "      <td>-14.520153</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>educ</td>\n",
+       "      <td>5775.0</td>\n",
+       "      <td>142.857276</td>\n",
+       "      <td>40.423694</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>white</td>\n",
+       "      <td>3404.0</td>\n",
+       "      <td>1156.674059</td>\n",
+       "      <td>2.943032</td>\n",
+       "      <td>3.255598e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>intercept</td>\n",
+       "      <td>13200.0</td>\n",
+       "      <td>1893.014235</td>\n",
+       "      <td>6.972899</td>\n",
+       "      <td>3.246958e-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Variable name  coefficient value  standard error  t-statistic       p-value\n",
+       "0           sex           -13565.0      584.976467   -23.189669  2.000000e+00\n",
+       "1           age             -235.0       16.183833   -14.520153  2.000000e+00\n",
+       "2          educ             5775.0      142.857276    40.423694  0.000000e+00\n",
+       "3         white             3404.0     1156.674059     2.943032  3.255598e-03\n",
+       "4     intercept            13200.0     1893.014235     6.972899  3.246958e-12"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1083,6 +1170,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy import stats\n",
     "from scipy import stats\n",
     "\n",
     "class RegressionModel:\n",
@@ -1129,7 +1217,7 @@
     "\n",
     "        # t-stats and p-values.\n",
     "        t_stats = beta.flatten() / se\n",
-    "        p_values = [2 * (1 - stats.t.cdf(np.abs(t), df)) for t in t_stats]\n",
+    "        p_values = [2 * (1 - stats.t.sf(-t, df)) for t in t_stats]\n",
     "\n",
     "        # Store results.\n",
     "        var_names = self.x.columns\n",
@@ -1152,24 +1240,61 @@
     "\n",
     "        for var, metrics in self.results.items():\n",
     "            summary_data[\"Variable name\"].append(var)\n",
-    "            summary_data[\"coefficient value\"].append(metrics[\"coefficient\"])\n",
+    "            summary_data[\"coefficient value\"].append(round(metrics[\"coefficient\"],0))\n",
     "            summary_data[\"standard error\"].append(metrics[\"standard_error\"])\n",
     "            summary_data[\"t-statistic\"].append(metrics[\"t_stat\"])\n",
     "            summary_data[\"p-value\"].append(metrics[\"p_value\"])\n",
     "\n",
     "        return pd.DataFrame(summary_data)\n",
     "\n",
+    "\n",
     "'''data = pd.read_csv(\"tests/files/assignment8Data.csv\")\n",
     "x = data[['sex','age','educ','white']]\n",
     "y = data['incwage']\n",
     "reg = RegressionModel(x, y, create_intercept=True)\n",
     "\n",
-    "x = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
+    "sex = {'coefficient': -13565.410626563069,\n",
+    "'standard_error': 584.9764665087288,\n",
+    "'t_stat': -23.189668992198083,\n",
+    "'p_value': 1.0}\n",
+    "age = {'coefficient': -234.9917187921841,\n",
+    "'standard_error': 16.183832538528538,\n",
+    "'t_stat': -14.52015264201133,\n",
+    "'p_value': 1.0}\n",
+    "educ = {'coefficient': 5774.818729189603,\n",
+    "'standard_error': 142.8572756581845,\n",
+    "'t_stat': 40.423693526166964,\n",
+    "'p_value': 0.0}\n",
+    "white = {'coefficient': 3404.128500195802,\n",
+    "'standard_error': 1156.6740591808912,\n",
+    "'t_stat': 2.9430317669668025,\n",
+    "'p_value': 0.0016277988173345036}\n",
+    "intercept = {'coefficient': 13199.797995938803,\n",
+    "'standard_error': 1893.0142350027074,\n",
+    "'t_stat': 6.972899491122909,\n",
+    "'p_value': 1.6234517904886598e-12}\n",
+    "sexEq = (round(sex['coefficient'], 0)==round(reg.results['sex']['coefficient'], 0)) & (round(sex['standard_error'], 0)==round(reg.results['sex']['standard_error'], 0)) & (round(sex['t_stat'], 0)==round(reg.results['sex']['t_stat'], 0)) & (round(sex['p_value'], 0)==round(reg.results['sex']['p_value'], 2))\n",
+    "ageEq = (round(age['coefficient'], 0)==round(reg.results['age']['coefficient'], 0)) &  (round(age['standard_error'], 0)==round(reg.results['age']['standard_error'], 0)) & (round(age['t_stat'], 0)==round(reg.results['age']['t_stat'], 0)) & (round(age['p_value'], 0)==round(reg.results['age']['p_value'], 0))\n",
+    "educEq = (round(educ['coefficient'], 0)==round(reg.results['educ']['coefficient'], 0)) & (round(educ['standard_error'], 0)==round(reg.results['educ']['standard_error'], 0)) & (round(educ['t_stat'], 0)==round(reg.results['educ']['t_stat'], 0)) & (round(educ['p_value'], 0)==round(reg.results['educ']['p_value'], 0))\n",
+    "whiteEq = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value'], 0)==round(reg.results['white']['p_value'], 0))\n",
+    "interceptEq = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value'], 0)==round(reg.results['intercept']['p_value'], 0))\n",
+    "\n",
+    "sexEq2 = (round(sex['coefficient'], 0)==round(reg.results['sex']['coefficient'], 0)) & (round(sex['standard_error'], 0)==round(reg.results['sex']['standard_error'], 0)) & (round(sex['t_stat'], 0)==round(reg.results['sex']['t_stat'], 0)) & (round(sex['p_value']*2, 0)==round(reg.results['sex']['p_value'], 0))\n",
+    "ageEq2 = (round(age['coefficient'], 0)==round(reg.results['age']['coefficient'], 0)) &  (round(age['standard_error'], 0)==round(reg.results['age']['standard_error'], 0)) & (round(age['t_stat'], 0)==round(reg.results['age']['t_stat'], 0)) & (round(age['p_value']*2, 0)==round(reg.results['age']['p_value'], 0))\n",
+    "educEq2 = (round(educ['coefficient'], 0)==round(reg.results['educ']['coefficient'],0)) & (round(educ['standard_error'], 0)==round(reg.results['educ']['standard_error'], 0)) & (round(educ['t_stat'], 0)==round(reg.results['educ']['t_stat'], 0)) & (round(educ['p_value']*2, 0)==round(reg.results['educ']['p_value'], 0))\n",
+    "whiteEq2 = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value']*2, 0)==round(reg.results['white']['p_value'], 0))\n",
+    "interceptEq2 = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value']*2, 0)==round(reg.results['intercept']['p_value'], 0))\n",
+    "\n",
+    "print(sexEq, ageEq, educEq, whiteEq, interceptEq)\n",
+    "print(sexEq2, ageEq2, educEq2, whiteEq2, interceptEq2)\n",
+    "\n",
+    "reg.ols_regression()\n",
+    "reg.summary()'''\n",
+    "\n",
     "#x\n",
     "#reg.x\n",
-    "type(x)\n",
     "#type(reg.y)\n",
-    "print(reg.y.equals(y))'''\n"
+    "#print(reg.ols_regression())\n"
    ]
   }
  ],
