--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1055,109 +1055,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False False True True True\n",
-      "True True True True True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<positron-console-cell-37>:25: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+      "<positron-console-cell-48>:86: SyntaxWarning: invalid escape sequence '\\d'\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Variable name</th>\n",
-       "      <th>coefficient value</th>\n",
-       "      <th>standard error</th>\n",
-       "      <th>t-statistic</th>\n",
-       "      <th>p-value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sex</td>\n",
-       "      <td>-13565.0</td>\n",
-       "      <td>584.976467</td>\n",
-       "      <td>-23.189669</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>age</td>\n",
-       "      <td>-235.0</td>\n",
-       "      <td>16.183833</td>\n",
-       "      <td>-14.520153</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>educ</td>\n",
-       "      <td>5775.0</td>\n",
-       "      <td>142.857276</td>\n",
-       "      <td>40.423694</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>white</td>\n",
-       "      <td>3404.0</td>\n",
-       "      <td>1156.674059</td>\n",
-       "      <td>2.943032</td>\n",
-       "      <td>3.255598e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>intercept</td>\n",
-       "      <td>13200.0</td>\n",
-       "      <td>1893.014235</td>\n",
-       "      <td>6.972899</td>\n",
-       "      <td>3.246958e-12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  Variable name  coefficient value  standard error  t-statistic       p-value\n",
-       "0           sex           -13565.0      584.976467   -23.189669  2.000000e+00\n",
-       "1           age             -235.0       16.183833   -14.520153  2.000000e+00\n",
-       "2          educ             5775.0      142.857276    40.423694  0.000000e+00\n",
-       "3         white             3404.0     1156.674059     2.943032  3.255598e-03\n",
-       "4     intercept            13200.0     1893.014235     6.972899  3.246958e-12"
+       "'from io import StringIO\\nimport sys as system\\nimport re\\n\\nstdout = system.stdout\\nsystem.stdout = StringIO()\\n\\ndata = pd.read_csv(\"tests/files/assignment8Data.csv\")\\nx = data[[\\'sex\\',\\'age\\',\\'educ\\',\\'white\\']]\\ny = data[\\'incwage\\']\\nreg = RegressionModel(x, y, create_intercept=True)\\n\\noutput = system.stdout.getvalue()\\nsystem.stdout = stdout\\n\\nlabels = bool(re.findall(r\\'[Cc]oef.*[Ss]t.*[Tt].*[Pp].*\\', output))\\nsex = bool(re.findall(r\\'sex.*\\\\d+.*\\\\d+.*\\\\d+.*\\\\d+.*\\', output))\\nage = bool(re.findall(r\\'age.*\\\\d+.*\\\\d+.*\\\\d+.*\\\\d+.*\\', output))\\neduc = bool(re.findall(r\\'educ.*\\\\d+.*\\\\d+.*\\\\d+.*\\\\d+.*\\', output))\\nwhite = bool(re.findall(r\\'white.*\\\\d+.*\\\\d+.*\\\\d+.*\\\\d+.*\\', output))\\nintercept = bool(re.findall(r\\'intercept.*\\\\d+.*\\\\d+.*\\\\d+.*\\\\d+.*\\', output))\\n\\nprint(labels, sex, age, educ, white, intercept)\\n\\nreg.summary()'"
       ]
      },
      "execution_count": null,
@@ -1171,7 +1083,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
-    "from scipy import stats\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None\n",
     "\n",
     "class RegressionModel:\n",
     "    def __init__(self, x, y, create_intercept: bool, regression_type: str = 'ols'):\n",
@@ -1188,6 +1101,8 @@
     "            self.ols_regression()\n",
     "        else:\n",
     "            raise NotImplementedError(\"Only 'ols' regression is currently implemented.\")\n",
+    "\n",
+    "        print(self.summary().to_string())\n",
     "    \n",
     "    def add_intercept(self):\n",
     "        self.x['intercept'] = 1\n",
@@ -1248,53 +1163,31 @@
     "        return pd.DataFrame(summary_data)\n",
     "\n",
     "\n",
-    "'''data = pd.read_csv(\"tests/files/assignment8Data.csv\")\n",
+    "'''from io import StringIO\n",
+    "import sys as system\n",
+    "import re\n",
+    "\n",
+    "stdout = system.stdout\n",
+    "system.stdout = StringIO()\n",
+    "\n",
+    "data = pd.read_csv(\"tests/files/assignment8Data.csv\")\n",
     "x = data[['sex','age','educ','white']]\n",
     "y = data['incwage']\n",
     "reg = RegressionModel(x, y, create_intercept=True)\n",
     "\n",
-    "sex = {'coefficient': -13565.410626563069,\n",
-    "'standard_error': 584.9764665087288,\n",
-    "'t_stat': -23.189668992198083,\n",
-    "'p_value': 1.0}\n",
-    "age = {'coefficient': -234.9917187921841,\n",
-    "'standard_error': 16.183832538528538,\n",
-    "'t_stat': -14.52015264201133,\n",
-    "'p_value': 1.0}\n",
-    "educ = {'coefficient': 5774.818729189603,\n",
-    "'standard_error': 142.8572756581845,\n",
-    "'t_stat': 40.423693526166964,\n",
-    "'p_value': 0.0}\n",
-    "white = {'coefficient': 3404.128500195802,\n",
-    "'standard_error': 1156.6740591808912,\n",
-    "'t_stat': 2.9430317669668025,\n",
-    "'p_value': 0.0016277988173345036}\n",
-    "intercept = {'coefficient': 13199.797995938803,\n",
-    "'standard_error': 1893.0142350027074,\n",
-    "'t_stat': 6.972899491122909,\n",
-    "'p_value': 1.6234517904886598e-12}\n",
-    "sexEq = (round(sex['coefficient'], 0)==round(reg.results['sex']['coefficient'], 0)) & (round(sex['standard_error'], 0)==round(reg.results['sex']['standard_error'], 0)) & (round(sex['t_stat'], 0)==round(reg.results['sex']['t_stat'], 0)) & (round(sex['p_value'], 0)==round(reg.results['sex']['p_value'], 2))\n",
-    "ageEq = (round(age['coefficient'], 0)==round(reg.results['age']['coefficient'], 0)) &  (round(age['standard_error'], 0)==round(reg.results['age']['standard_error'], 0)) & (round(age['t_stat'], 0)==round(reg.results['age']['t_stat'], 0)) & (round(age['p_value'], 0)==round(reg.results['age']['p_value'], 0))\n",
-    "educEq = (round(educ['coefficient'], 0)==round(reg.results['educ']['coefficient'], 0)) & (round(educ['standard_error'], 0)==round(reg.results['educ']['standard_error'], 0)) & (round(educ['t_stat'], 0)==round(reg.results['educ']['t_stat'], 0)) & (round(educ['p_value'], 0)==round(reg.results['educ']['p_value'], 0))\n",
-    "whiteEq = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value'], 0)==round(reg.results['white']['p_value'], 0))\n",
-    "interceptEq = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value'], 0)==round(reg.results['intercept']['p_value'], 0))\n",
+    "output = system.stdout.getvalue()\n",
+    "system.stdout = stdout\n",
     "\n",
-    "sexEq2 = (round(sex['coefficient'], 0)==round(reg.results['sex']['coefficient'], 0)) & (round(sex['standard_error'], 0)==round(reg.results['sex']['standard_error'], 0)) & (round(sex['t_stat'], 0)==round(reg.results['sex']['t_stat'], 0)) & (round(sex['p_value']*2, 0)==round(reg.results['sex']['p_value'], 0))\n",
-    "ageEq2 = (round(age['coefficient'], 0)==round(reg.results['age']['coefficient'], 0)) &  (round(age['standard_error'], 0)==round(reg.results['age']['standard_error'], 0)) & (round(age['t_stat'], 0)==round(reg.results['age']['t_stat'], 0)) & (round(age['p_value']*2, 0)==round(reg.results['age']['p_value'], 0))\n",
-    "educEq2 = (round(educ['coefficient'], 0)==round(reg.results['educ']['coefficient'],0)) & (round(educ['standard_error'], 0)==round(reg.results['educ']['standard_error'], 0)) & (round(educ['t_stat'], 0)==round(reg.results['educ']['t_stat'], 0)) & (round(educ['p_value']*2, 0)==round(reg.results['educ']['p_value'], 0))\n",
-    "whiteEq2 = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value']*2, 0)==round(reg.results['white']['p_value'], 0))\n",
-    "interceptEq2 = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value']*2, 0)==round(reg.results['intercept']['p_value'], 0))\n",
+    "labels = bool(re.findall(r'[Cc]oef.*[Ss]t.*[Tt].*[Pp].*', output))\n",
+    "sex = bool(re.findall(r'sex.*\\d+.*\\d+.*\\d+.*\\d+.*', output))\n",
+    "age = bool(re.findall(r'age.*\\d+.*\\d+.*\\d+.*\\d+.*', output))\n",
+    "educ = bool(re.findall(r'educ.*\\d+.*\\d+.*\\d+.*\\d+.*', output))\n",
+    "white = bool(re.findall(r'white.*\\d+.*\\d+.*\\d+.*\\d+.*', output))\n",
+    "intercept = bool(re.findall(r'intercept.*\\d+.*\\d+.*\\d+.*\\d+.*', output))\n",
     "\n",
-    "print(sexEq, ageEq, educEq, whiteEq, interceptEq)\n",
-    "print(sexEq2, ageEq2, educEq2, whiteEq2, interceptEq2)\n",
+    "print(labels, sex, age, educ, white, intercept)\n",
     "\n",
-    "reg.ols_regression()\n",
-    "reg.summary()'''\n",
-    "\n",
-    "#x\n",
-    "#reg.x\n",
-    "#type(reg.y)\n",
-    "#print(reg.ols_regression())\n"
+    "reg.summary()'''\n"
    ]
   }
  ],
